implemented new message formats (VotingResult, VotingCancellation) to be sent over websocket
