# src/gvt_server/models/voting_cancellation_message.py
@@ -1,0 +1,107 @@
+# coding: utf-8
+
+"""
+    Game Voting API
+
+    This API is meant as baseline functionality for a game voting tool that is combined with an Asyncapi specification for all the interactive pieces.
+
+    The version of the OpenAPI document: 2.0.0
+    Contact: philipp.schmurr@gmail.com
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+
+
+from pydantic import BaseModel, ConfigDict, StrictStr
+from typing import Any, ClassVar, Dict, List
+from gvt_server.models.user_reset_vote import UserResetVote
+from sqlmodel import SQLModel, Field, Relationship
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+class VotingCancellationMessage(SQLModel):
+    """
+    VotingCancellationMessage
+    """ # noqa: E501
+    type: StrictStr
+    body: List[UserResetVote]
+    __properties: ClassVar[List[str]] = ["type", "body"]
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of VotingCancellationMessage from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude={
+            },
+            exclude_none=True,
+        )
+        # override the default output from pydantic by calling `to_dict()` of each item in body (list)
+        _items = []
+        if self.body:
+            for _item in self.body:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['body'] = _items
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        """Create an instance of VotingCancellationMessage from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        # raise errors for additional fields in the input
+        for _key in obj.keys():
+            if _key not in cls.__properties:
+                raise ValueError("Error due to additional fields (not defined in VotingCancellationMessage) in the input: " + _key)
+
+        _obj = cls.model_validate({
+            "type": obj.get("type") if obj.get("type") is not None else 'cancellation',
+            "body": [UserResetVote.from_dict(_item) for _item in obj.get("body")] if obj.get("body") is not None else None
+        })
+        return _obj
+
+
