# src/gvt_server/models/websocket_message.py
@@ -1,0 +1,166 @@
+# coding: utf-8
+
+"""
+    Game Voting API
+
+    This API is meant as baseline functionality for a game voting tool that is combined with an Asyncapi specification for all the interactive pieces.
+
+    The version of the OpenAPI document: 2.0.0
+    Contact: philipp.schmurr@gmail.com
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+from inspect import getfullargspec
+import json
+import pprint
+import re  # noqa: F401
+
+
+
+from pydantic import BaseModel, ConfigDict, Field, StrictStr, ValidationError, field_validator
+from typing import Any, List, Optional
+from gvt_server.models.voting_cancellation_message import VotingCancellationMessage
+from gvt_server.models.voting_result_message import VotingResultMessage
+from gvt_server.models.voting_session_message import VotingSessionMessage
+from typing import Union, Any, List, TYPE_CHECKING, Optional, Dict
+from typing_extensions import Literal
+from pydantic import StrictStr, Field
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+WEBSOCKETMESSAGE_ONE_OF_SCHEMAS = ["VotingCancellationMessage", "VotingResultMessage", "VotingSessionMessage"]
+
+class WebsocketMessage(BaseModel):
+    """
+    WebsocketMessage
+    """
+    # data type: VotingSessionMessage
+    oneof_schema_1_validator: Optional[VotingSessionMessage] = None
+    # data type: VotingResultMessage
+    oneof_schema_2_validator: Optional[VotingResultMessage] = None
+    # data type: VotingCancellationMessage
+    oneof_schema_3_validator: Optional[VotingCancellationMessage] = None
+    actual_instance: Optional[Union[VotingCancellationMessage, VotingResultMessage, VotingSessionMessage]] = None
+    one_of_schemas: List[str] = Literal["VotingCancellationMessage", "VotingResultMessage", "VotingSessionMessage"]
+
+    model_config = {
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    discriminator_value_class_map: Dict[str, str] = {
+    }
+
+    def __init__(self, *args, **kwargs) -> None:
+        if args:
+            if len(args) > 1:
+                raise ValueError("If a position argument is used, only 1 is allowed to set `actual_instance`")
+            if kwargs:
+                raise ValueError("If a position argument is used, keyword arguments cannot be used.")
+            super().__init__(actual_instance=args[0])
+        else:
+            super().__init__(**kwargs)
+
+    @field_validator('actual_instance')
+    def actual_instance_must_validate_oneof(cls, v):
+        instance = WebsocketMessage.model_construct()
+        error_messages = []
+        match = 0
+        # validate data type: VotingSessionMessage
+        if not isinstance(v, VotingSessionMessage):
+            error_messages.append(f"Error! Input type `{type(v)}` is not `VotingSessionMessage`")
+        else:
+            match += 1
+        # validate data type: VotingResultMessage
+        if not isinstance(v, VotingResultMessage):
+            error_messages.append(f"Error! Input type `{type(v)}` is not `VotingResultMessage`")
+        else:
+            match += 1
+        # validate data type: VotingCancellationMessage
+        if not isinstance(v, VotingCancellationMessage):
+            error_messages.append(f"Error! Input type `{type(v)}` is not `VotingCancellationMessage`")
+        else:
+            match += 1
+        if match > 1:
+            # more than 1 match
+            raise ValueError("Multiple matches found when setting `actual_instance` in WebsocketMessage with oneOf schemas: VotingCancellationMessage, VotingResultMessage, VotingSessionMessage. Details: " + ", ".join(error_messages))
+        elif match == 0:
+            # no match
+            raise ValueError("No match found when setting `actual_instance` in WebsocketMessage with oneOf schemas: VotingCancellationMessage, VotingResultMessage, VotingSessionMessage. Details: " + ", ".join(error_messages))
+        else:
+            return v
+
+    @classmethod
+    def from_dict(cls, obj: dict) -> Self:
+        return cls.from_json(json.dumps(obj))
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Returns the object represented by the json string"""
+        instance = cls.model_construct()
+        error_messages = []
+        match = 0
+
+        # deserialize data into VotingSessionMessage
+        try:
+            instance.actual_instance = VotingSessionMessage.from_json(json_str)
+            match += 1
+        except (ValidationError, ValueError) as e:
+            error_messages.append(str(e))
+        # deserialize data into VotingResultMessage
+        try:
+            instance.actual_instance = VotingResultMessage.from_json(json_str)
+            match += 1
+        except (ValidationError, ValueError) as e:
+            error_messages.append(str(e))
+        # deserialize data into VotingCancellationMessage
+        try:
+            instance.actual_instance = VotingCancellationMessage.from_json(json_str)
+            match += 1
+        except (ValidationError, ValueError) as e:
+            error_messages.append(str(e))
+
+        if match > 1:
+            # more than 1 match
+            raise ValueError("Multiple matches found when deserializing the JSON string into WebsocketMessage with oneOf schemas: VotingCancellationMessage, VotingResultMessage, VotingSessionMessage. Details: " + ", ".join(error_messages))
+        elif match == 0:
+            # no match
+            raise ValueError("No match found when deserializing the JSON string into WebsocketMessage with oneOf schemas: VotingCancellationMessage, VotingResultMessage, VotingSessionMessage. Details: " + ", ".join(error_messages))
+        else:
+            return instance
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the actual instance"""
+        if self.actual_instance is None:
+            return "null"
+
+        to_json = getattr(self.actual_instance, "to_json", None)
+        if callable(to_json):
+            return self.actual_instance.to_json()
+        else:
+            return json.dumps(self.actual_instance)
+
+    def to_dict(self) -> Dict:
+        """Returns the dict representation of the actual instance"""
+        if self.actual_instance is None:
+            return None
+
+        to_dict = getattr(self.actual_instance, "to_dict", None)
+        if callable(to_dict):
+            return self.actual_instance.to_dict()
+        else:
+            # primitive type
+            return self.actual_instance
+
+    def to_str(self) -> str:
+        """Returns the string representation of the actual instance"""
+        return pprint.pformat(self.model_dump())
+
+
