# src/gvt_server/models/websocket_message_type.py
@@ -1,0 +1,47 @@
+# coding: utf-8
+
+"""
+    Game Voting API
+
+    This API is meant as baseline functionality for a game voting tool that is combined with an Asyncapi specification for all the interactive pieces.
+
+    The version of the OpenAPI document: 2.0.0
+    Contact: philipp.schmurr@gmail.com
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import json
+import pprint
+import re  # noqa: F401
+from enum import Enum
+
+
+
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+
+class WebsocketMessageType(str, Enum):
+    """
+    WebsocketMessageType
+    """
+
+    """
+    allowed enum values
+    """
+    VOTING_SESSION = 'voting_session'
+    RESULT = 'result'
+    CANCELLATION = 'cancellation'
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of WebsocketMessageType from a JSON string"""
+        return cls(json.loads(json_str))
+
+
